--- a/index.html
+++ b/index.html
@@ -38,15 +38,30 @@
           <div class="main_slide">
             <div class="itm main_slide_nm">
               <div class="slogan inner">
-                <h2>ㅇㅅㅇ</h2>
+                <h2>첫 구매 패키지 상품 출시</h2>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Excepturi voluptatem, cum nam sint neque nesciunt quis eveniet
-                  animi temporibus inventore?
+                  첫구매 고객님들의 가격부담을 줄이고자, 저렴한 가격에 눈꽃냉면
+                  상품 패키지를 판매하고 있습니다.
+                </p>
+                <a href="">자세히보기</a>
+              </div>
+            </div>
+            <div class="itm main_slide_nk">
+              <div class="slogan inner">
+                <h2>수고와 땀은 저희가 흘리겠습니다.</h2>
+                <p>
+                  최고의 전문가들이 사장님께서 선택한 눈꽃냉면이 저절로 맛집으로
+                  소문이 나게하는 최상의 브랜딩 효과로 사장님께서 부자가
+                  되시는데 최선을 다하겠습니다.
                 </p>
               </div>
             </div>
           </div>
+          <div class="arrows">
+            <i class="xi-angle-left left"></i>
+            <i class="xi-angle-right right"></i>
+          </div>
+          <div class="slide_num"><span>1</span> / <strong>2</strong></div>
         </section>
         <!-- section 01 -->
         <section class="sec main_content">
@@ -183,12 +198,12 @@
           <div class="inner tab">
             <div class="freature_tab">
               <ul class="freature_tab_link">
-                <li class="on"><a href="">첫번째</a></li>
-                <li><a href="">두번째</a></li>
-                <li><a href="">세번째</a></li>
-                <li><a href="">네번째</a></li>
-                <li><a href="">다섯번째</a></li>
-                <li><a href="">여섯번째</a></li>
+                <li class="on"><a href="">POINT 01</a></li>
+                <li><a href="">POINT 02</a></li>
+                <li><a href="">POINT 03</a></li>
+                <li><a href="">POINT 04</a></li>
+                <li><a href="">POINT 05</a></li>
+                <li><a href="">POINT 06</a></li>
               </ul>
               <div class="freature_tab_content">
                 <div class="con on">
@@ -329,6 +344,9 @@
           </div>
         </address>
       </footer>
+      <div class="to_top">
+        <i class="xi-arrow-top"></i>
+      </div>
     </div>
   </body>
 </html>
