--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
               <li><a href="">특징</a></li>
               <li><a href="">샘플신청</a></li>
               <li><a href="">구매</a></li>
-              <li><a href="">배민 이미지 문의사항</a></li>
+              <li><a href="">배민 이미지</a></li>
+              <li><a href="">문의사항</a></li>
             </ul>
           </nav>
+          <div class="login_area">
+            <ul class="member">
+              <li><a href="">로그인</a></li>
+              <li><a href="">회원가입</a></li>
+            </ul>
+          </div>
         </div>
       </header>
       <!-- main -->
