--- a/index.html
+++ b/index.html
@@ -30,12 +30,15 @@
               <li><a href="">문의사항</a></li>
             </ul>
           </nav>
-          <div class="login_area">
-            <ul class="member">
-              <li><a href="">로그인</a></li>
-              <li><a href="">회원가입</a></li>
-            </ul>
-          </div>
+          <ul class="member">
+            <li><a href="">로그인</a></li>
+            <li><a href="">회원가입</a></li>
+          </ul>
+        </div>
+        <div class="mobile_btn">
+          <button>
+            <span class="blind">모바일 버튼</span>
+          </button>
         </div>
       </header>
       <!-- main -->
@@ -119,7 +122,7 @@
           </div>
         </section>
         <!-- section 02 -->
-        <section class="sec main_introduce">
+        <section class="sec main_introduce _se_">
           <h2 class="blind">눈꽃냉면의 특징 첫번째</h2>
           <div class="inner content">
             <div class="content_wrap">
