--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </div>
         </section>
         <!-- section 02 -->
-        <section class="sec main_introduce _se_">
+        <section class="sec main_introduce">
           <h2 class="blind">눈꽃냉면의 특징 첫번째</h2>
           <div class="inner content">
             <div class="content_wrap">
@@ -237,9 +237,9 @@
                     <span>POINT 02</span>
                     <h3><strong>오도독</strong>하고 씹혀 중독성 있는 면</h3>
                     <p>
-                      시중의 흔한 밀가루 맛 나는 면이 아닙니다! 0.7mm의
-                      면두께와<br />전분 45% 함량으로 더욱 쫄깃하고 탱탱한 면을
-                      맛보실 수 있습니다.
+                      시중의 흔한 밀가루 맛 나는 면이 아닙니다! 0.7mm의 면두께와
+                      전분 45% 함량으로 더욱 쫄깃하고 탱탱한 면을 맛보실 수
+                      있습니다.
                     </p>
                   </div>
                   <div class="img_box">
@@ -253,9 +253,9 @@
                       <strong>캬~</strong> 소리 절로 나오는 진하고 깔끔한 육수
                     </h3>
                     <p>
-                      사골과 소고기, 아미노산간장, 야채혼합농축액을 넣고 푹
-                      고아<br />숙성시킨 특제육수이며 조미료 맛이 아닌 진하고
-                      깔끔한 육수를 맛보실 수 있습니다.
+                      사골과 소고기, 아미노산간장, 야채혼합농축액을 넣고 푹 고아
+                      숙성시킨 특제육수이며 조미료 맛이 아닌 진하고 깔끔한
+                      육수를 맛보실 수 있습니다.
                     </p>
                   </div>
                   <div class="img_box">
@@ -269,9 +269,9 @@
                       각종 야채와 과일을 넣어 <strong>달콤매콤</strong> 비빔장
                     </h3>
                     <p>
-                      일반적인 양념과는 다른 눈꽃냉면만의 특별한 맛을 내기
-                      위해<br />조미료보다는 야채와 과일을 넣어 독특한
-                      달콤매콤한 맛에 중독됩니다.
+                      일반적인 양념과는 다른 눈꽃냉면만의 특별한 맛을 내기 위해
+                      조미료보다는 야채와 과일을 넣어 독특한 달콤매콤한 맛에
+                      중독됩니다.
                     </p>
                   </div>
                   <div class="img_box">
@@ -285,7 +285,7 @@
                       모양, 색, 맛 3가지를 <strong>한 번에</strong> 잡은 만두
                     </h3>
                     <p>
-                      천연강황가루와 백년초가루를 넣어 색을 낸 눈꽃만두<br />모양도
+                      천연강황가루와 백년초가루를 넣어 색을 낸 눈꽃만두 모양도
                       맛도 예술. 고기와 김치 두가지 맛이 있으며 고기만두는
                       튀겨먹어도 맛있습니다.
                     </p>
